perf(cache): columnar merge engine — dictionary-encoded keys + primitive-array aggregation (plan J.4/J.9)
Replace the row-map hot path (boxed Map<String,Object> rows, string group
keys, TreeMap grouping) with ColumnarHashAggregator: dimensions dictionary-
encoded to int ids, group keys packed into a single long, measures combined
in open-addressed double[] accumulators — the HashAggregateExec approach.
GlobalAggregateMerger and TimeSeriesBucketResampler become thin row-object
adapters over the same kernel so their APIs and tests are unchanged.
ResultFrame.rows() returns an unmodifiable view instead of copying (the
copy made per-frame merge loops O(n^2)). Add the -Plocal-spark profile
bundling Spark 3.5 + Delta for local runs.